# robotarm

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/robotarm/share/robotarm/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robotarm/share/robotarm/cmake/: robotarmConfig.cmake
install/robotarm_moveit2/share/robotarm_moveit2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robotarm_moveit2/share/robotarm_moveit2/cmake/: robotarm_moveit2Config.cmake
install/robotarm_moveit2/share/robotarm_moveit2/config/: robotarm.ros2_control.xacro  robotarm.srdf  robotarm.urdf.xacro
install/robotarm_moveit2/share/robotarm_moveit2/launch/: demo.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py  (+1 more)
log/: latest_build
robotarm/: CMakeLists.txt  package.xml
robotarm/launch/: display.launch  gazebo.launch
robotarm/meshes/: Link5.STL
robotarm/urdf/: robotarm.csv  robotarm.urdf
robotarm_control/: CMakeLists.txt  package.xml
robotarm_control/include/robotarm_control/: robotarm_control.hpp
robotarm_control/launch/: robotarm.launch.py  robotarm_moveit_rviz.launch.py
robotarm_control/src/: robotarm_control.cpp
robotarm_moveit2/: .setup_assistant  CMakeLists.txt  package.xml
robotarm_moveit2/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
robotarm_moveit2/launch/: move_group.launch.py
(+2 files in other folders)
