<package format="3">
  <name>robotarm</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robotarm_config</p>
    <p>This package contains configuration data, 3D models and launch files
for robotarm_config robot</p>
  </description>
  <author>jxf</author>
  <maintainer email="15089190636@139.com" />
  <license>BSD</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
     <build_type>ament_cmake</build_type>
  </export>
</package>
